<resources>
    <string name="app_name">SQLite Insert</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add_user">Add User</string>
    <string name="view_data">View Data</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name_data">Enter Name to Delete Data</string>
    <string name="current_name">Current Name</string>
    <string name="new_name">New Name</string>
</resources>